fixed bug on mobile with tagline text - adding margin 0

--- a/styles.scss
+++ b/styles.scss
@@ -324,6 +324,7 @@ footer div {
 		font-size: 1.5rem;
 		text-align: center;
 		padding: 5%;
+		margin: 0;
 	}
 	
 	.about {
